--- a/css/common.css
+++ b/css/common.css
@@ -1,21 +1,43 @@
 @charset "utf-8";
 
 /* common.css - 공통레이아웃 디자인 */
+
+/****************************헤더********************/
+#header{
+    position: relative;
+}
 header{
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     height: 100px;
     width: 100%;
     background: rgba(0, 0, 0, 0.6);
     z-index: 100;
 }
 
+/*로고*/
 header h1{
-    margin-top: 35px;
+    padding-top: 35px;
+    padding-left: 70px;
 }
 
+/*gnb*/
+.gnb{
+    position: absolute;
+    width: 150px;
+    right: 70px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.gnb li{
+    width: 33.33%;
+    text-align: center;
+}
 .gnb img{
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
 }
 
 
