--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,13 @@
 
 
 /* 메인비주얼 100% */
-.main_page{
-    border: 1px solid red;
+#main_page{
     position: relative;
     width: 100%;
     height: 100%;
 }
 
+/* 배경깔기 */
 .main_bg{
     position: absolute;
     left: 0;
@@ -23,6 +23,8 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.21);
 }
+
+/*영상*/
 video{
     width: 100%;
     height: 100%;
@@ -36,7 +38,7 @@ video{
 }
 
 .main_text>h2{
-    font-size: 80px;
+    font-size: 5.7rem;
 }
 
 .main_text>p{
@@ -44,6 +46,79 @@ video{
     padding-left: 5px;
     line-height: 1.5;
 }
+
+/************* 컨텐츠영역1800 *************/
+#main_cont{
+    padding: 12% 0;
+    text-align: center;
+}
+
+/* 제목 */
+.cont_tit{
+    font-size: 5rem;
+    margin-bottom: 3%;
+}
+
+#main_cont section{
+    border: 1px solid red;
+    padding-top: 7%;
+    display: flex;
+}
+
+/* cont_img */
+.cont_img{
+    position: relative;
+    width: 650px;
+    height: 650px;
+}
+
+.cont_img img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: all .3s;
+}
+
+.contimghover{
+    opacity: 0;
+}
+
+.cont_img:hover .contimghover{
+    opacity: 1;
+}
+
+.cont_img:hover .contimg{
+    opacity: .7;
+}
+
+/* cont_txt */
+.cont_txt{
+    padding-left: 11%;
+    padding-top: 15%;
+    text-align: left;
+}
+
+.cont_txt h3{
+    font-size: 6rem;
+    padding-bottom: 10%;
+}
+
+.cont_txt p{
+    font-size: 1.3rem;
+    line-height: 1.2;
+}
+
+
+/* cont2 cont_txt */
+.cont2 .cont_txt{
+    padding-left: 0;
+    padding-right: 11%;
+    text-align: right;
+}
+
+
 
 
 
