--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,14 @@
 
 
 /* 메인비주얼 100% */
-#main_page{
+#main_page {
     position: relative;
     width: 100%;
     height: 100%;
 }
 
 /* 배경깔기 */
-.main_bg{
+.main_bg {
     position: absolute;
     left: 0;
     top: 0;
@@ -25,54 +25,54 @@
 }
 
 /*영상*/
-video{
+video {
     width: 100%;
     height: 100%;
 }
 
-.main_text{
+.main_text {
     position: absolute;
     color: #fff;
     top: 60%;
     left: 20%;
 }
 
-.main_text>h2{
+.main_text > h2 {
     font-size: 5.7rem;
 }
 
-.main_text>p{
+.main_text > p {
     margin-top: 50px;
     padding-left: 5px;
     line-height: 1.5;
 }
 
-/************* 컨텐츠영역1800 *************/
-#main_cont{
-    padding: 12% 0;
+/************* 선글라스 컨텐츠영역1700 *************/
+#sun_cont_wrap {
+    padding: 10% 0;
     text-align: center;
 }
 
 /* 제목 */
-.cont_tit{
+.cont_tit {
     font-size: 5rem;
     margin-bottom: 3%;
 }
 
-#main_cont section{
+#sun_cont_wrap section {
     border: 1px solid red;
     padding-top: 7%;
     display: flex;
 }
 
 /* cont_img */
-.cont_img{
+.cont_img {
     position: relative;
     width: 650px;
     height: 650px;
 }
 
-.cont_img img{
+.cont_img img {
     position: absolute;
     left: 0;
     top: 0;
@@ -81,45 +81,103 @@ video{
     transition: all .3s;
 }
 
-.contimghover{
+.contimghover {
     opacity: 0;
 }
 
-.cont_img:hover .contimghover{
+.cont_img:hover .contimghover {
     opacity: 1;
 }
 
-.cont_img:hover .contimg{
+.cont_img:hover .contimg {
     opacity: .7;
 }
 
 /* cont_txt */
-.cont_txt{
+.cont_txt {
     padding-left: 11%;
     padding-top: 15%;
     text-align: left;
 }
 
-.cont_txt h3{
+.cont_txt h3 {
     font-size: 6rem;
     padding-bottom: 10%;
 }
 
-.cont_txt p{
+.cont_txt p {
     font-size: 1.3rem;
     line-height: 1.2;
 }
 
 
-/* cont2 cont_txt */
-.cont2 .cont_txt{
+/* sun_cont2 cont_txt */
+.sun_cont2 .cont_txt {
     padding-left: 0;
     padding-right: 11%;
     text-align: right;
 }
 
+/****************************이벤트배너************/
+#ban {
+    position: relative;
+    height: 800px;
+    background: url(../images/bg1.jpg) no-repeat 0/cover;
+    font-size: 70px;
+}
+
+MARQUEE {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #000;
+    font-weight: 900;
+    color: #fff;
+    text-shadow: 2px 0 #000,0 2px #000,2px 0 #000,0 2px #000;
+    height: 70px;
+    line-height: 70px;
+    
+}
+
+.ban_btn{
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background: #000;
+    color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.ban_btn:hover{
+    color: #333;
+    background: #fff;
+}
+
+/********************** 안경 콘텐츠*****************/
+#gls_cont_wrap{
+    padding: 10% 0;
+    text-align: center;
+}
+.gls_cont1{
+    position: relative;
+}
 
 
+.gls_list li{
+    width: 300px;
+}
 
-
-
+.gls_list img{
+    width: 100%;
+    height: 100%;
+}
