--- a/css/reset.css
+++ b/css/reset.css
@@ -8,7 +8,9 @@ html,body,h1,h2,h3,h4,h5,h6,ul,ol,p{
 ul,ol{
     list-style: none;
 }
-
+h1,h2,h3,h4,h5,h6{
+    font-weight: 500;
+}
 ul::after, ol::after{
     content: "";
     display: block;
