--- a/css/core.css
+++ b/css/core.css
@@ -4,16 +4,24 @@
 /* 웹폰트 */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/*font-family: 'Montserrat', sans-serif;*/
+
+/* 슬라이드 글씨 */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/*font-family: 'Roboto', sans-serif;*/
 
 /* 공통 */
 html,body{
     width: 100%;
     height: 100%;
-/*    font-family: 'Noto Sans KR', sans-serif;*/
     font-family: 'Montserrat', sans-serif;
     line-height: 136%;
     font-size: 14px;
     color: #333;
+}
+
+body{
+    overflow-x: hidden;
 }
 
 /* 공통 클래스 */
