--- a/css/core.css
+++ b/css/core.css
@@ -11,7 +11,8 @@
 /*font-family: 'Roboto', sans-serif;*/
 
 /* 공통 */
-html,body{
+html,
+body {
     width: 100%;
     height: 100%;
     font-family: 'Montserrat', sans-serif;
@@ -26,7 +27,7 @@ body{
 
 /* 공통 클래스 */
 /* IR(image replacement) */
-.ir{
+.ir {
     display: block;
     width: 0;
     height: 0;
@@ -34,16 +35,20 @@ body{
 }
 
 /* 비율유지 class */
-.rbx{
+.rbx {
     position: relative;
 }
-.rbx::before{
+
+.rbx::before {
     content: '';
     display: block;
-    padding-top: 70% /* 랜덤 지정 */;
+    padding-top: 70%
+        /* 랜덤 지정 */
+    ;
 }
 
-.ibx{ /* 비율유지 속박스 */
+.ibx {
+    /* 비율유지 속박스 */
     position: absolute;
     top: 0;
     bottom: 0;
@@ -58,25 +63,17 @@ body{
     clear: both;
 }
 
-.wrap{
+.wrap {
     width: 1700px;
     max-width: 100%;
     margin: 0 auto;
+    
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#wrap {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
 
 
