--- a/css/main.css
+++ b/css/main.css
@@ -58,13 +58,13 @@ video {
     padding: 10% 0;
 }
 
-#sun_cont_wrap .title_wrap{
+.title_wrap{
     position: relative;
-    left: 10%;
+    left: 5%;
     opacity: 0;
     transition: all 1.5s ease-out;
 }
-#sun_cont_wrap .title_wrap.on{
+.title_wrap.on{
     left: 0%;
     opacity: 1;
 }
@@ -200,14 +200,15 @@ MARQUEE {
 .gls_cont {
     position: relative;
     padding: 5% 0;
+    overflow: hidden;
 }
 
 .gls_list {    
-    width: 100%;
+    width: 200%;
 }
 
 .gls_list li {
-    width: 23.5%;
+    width: 10.75%;
     height: 100%;
     margin-right: 2%;
 }
@@ -222,8 +223,20 @@ MARQUEE {
     background: url(../images/03.jpg) no-repeat 0/cover;
 }
 .gls_list li:nth-child(4){
-    margin-right: 0;
     background: url(../images/04.jpg) no-repeat 0/cover;
+}
+.gls_list li:nth-child(5){
+    background: url(../images/05.jpg) no-repeat 0/cover;
+}
+.gls_list li:nth-child(6){
+    background: url(../images/06.jpg) no-repeat 0/cover;
+}
+.gls_list li:nth-child(7){
+    background: url(../images/07.jpg) no-repeat 0/cover;
+}
+.gls_list li:nth-child(8){
+    margin-right: 0;
+    background: url(../images/08.jpg) no-repeat 0/cover;
 }
 .gls_list img {
     width: 100%;
@@ -250,19 +263,6 @@ MARQUEE {
     padding: 1% 0 1% 3%;
 }
 
-.more_btn{
-    text-align: right;
-    font-size: 22px;
-    padding: 2% 0;
-}
-.more_btn span{
-    transition: all .4s;
-}
-
-.more_btn a:hover span{
-    display: inline-block;
-    transform: rotate(360deg);
-}
 
 /************************ 오프라인 매장 ********************/
 .shop_btn{
