--- a/css/common.css
+++ b/css/common.css
@@ -89,6 +89,10 @@ header h1 {
     margin: 10px 0;
 }
 
+.footer_right p:first-child{
+    margin-top:0;
+}
+
 #footer p {
     color: #eee;
     font-size: 12px;
@@ -100,14 +104,13 @@ header h1 {
 
 /*********************** 햄버거메뉴 셋팅 ***********************/
 #menu_wrap.on {
-    display: block;
+    right: 0;
 }
 
 #menu_wrap {
-    display: none;
     position: fixed;
-    top: 0;
-    left: 0%;
+    right: -100%;
+    top: 0%;
     width: 100%;
     height: 100%;
     background: url(../images/menu1.jpg) no-repeat center/cover;
