--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,7 @@ MARQUEE {
 .gls_list li {
     width: 10.75%;
     height: 100%;
-    margin-right: 2%;
+    margin-right: 1%;
 }
 
 .gls_list li:nth-child(1){
@@ -289,8 +289,25 @@ MARQUEE {
 .shop_img{
     width: 100%;
     height: 500px;
-    background: url(../images/shop.jpg) no-repeat 0/100%;
 }
+
+.shop_img li{
+    width: 33.33%;
+    height: 100%;
+}
+
+.shop_img li:nth-child(1){
+    background: url(../images/shop1.jpg) no-repeat center/cover;
+}
+
+.shop_img li:nth-child(2){
+    background: url(../images/shop2.jpg) no-repeat center/cover;
+}
+
+.shop_img li:nth-child(3){
+    background: url(../images/shop3.jpg) no-repeat center/cover;
+}
+
 
 
 #flowTxt{
