--- a/css/gallery.css
+++ b/css/gallery.css
@@ -13,8 +13,28 @@
 
 /******************* 중앙 텍스트 *******************/
 #text{
-    font-weight: 500;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-weight: 200;
     font-size: 30vmin;
-    text-align: center;
-    line-height: 100%;
+    z-index: 1;
 }
+
+#photo{
+    position: relative;
+    width: 250%;
+    height: 100%;
+}
+
+#photo li{
+    position: absolute;
+    width: 20vmax;
+}
+
+#photo img{
+    width: 100%;
+}
+
+
