--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,10 @@ video {
     color: #2e63ac;
 }
 
+.sun_cont1.on span,
+.sun_cont2.on span{
+    transform: rotate(360deg);
+}
 
 /* cont_txt */
 .cont_txt {
@@ -138,6 +142,12 @@ video {
     font-size: 1.3rem;
     line-height: 1.2;
 }
+
+.cont_txt span{
+    display: inline-block;
+    transition: all .5s;
+}
+
 
 /* sun_cont2 cont_txt */
 .sun_cont2 .cont_txt {
