--- a/css/main.css
+++ b/css/main.css
@@ -223,31 +223,6 @@ MARQUEE {
     margin-right: 1%;
 }
 
-.gls_list li:nth-child(1){
-    background: url(../images/01.jpg) no-repeat 0/cover;
-}
-.gls_list li:nth-child(2){
-    background: url(../images/02.jpg) no-repeat 0/cover;
-}
-.gls_list li:nth-child(3){
-    background: url(../images/03.jpg) no-repeat 0/cover;
-}
-.gls_list li:nth-child(4){
-    background: url(../images/04.jpg) no-repeat 0/cover;
-}
-.gls_list li:nth-child(5){
-    background: url(../images/05.jpg) no-repeat 0/cover;
-}
-.gls_list li:nth-child(6){
-    background: url(../images/06.jpg) no-repeat 0/cover;
-}
-.gls_list li:nth-child(7){
-    background: url(../images/07.jpg) no-repeat 0/cover;
-}
-.gls_list li:nth-child(8){
-    margin-right: 0;
-    background: url(../images/08.jpg) no-repeat 0/cover;
-}
 .gls_list img {
     width: 100%;
     height: 100%;
@@ -263,12 +238,12 @@ MARQUEE {
 }
 
 .gls_list h5{
-    font-size: 15px;
+    font-size: 2vmin;
     padding-left: 3%;
 }
 
 .gls_list h6{
-    font-size: 12px;
+    font-size: 1.5vmin;
     font-weight: 400;
     padding: 1% 0 1% 3%;
 }
