--- a/css/gallery.css
+++ b/css/gallery.css
@@ -9,6 +9,7 @@
 
 .gallery{
     background: #eee;
+    overflow: hidden;
 }
 
 /******************* 중앙 텍스트 *******************/
@@ -21,6 +22,7 @@
     font-size: 30vmin;
     color: #333;
     z-index: 1;
+    cursor: default;
 }
 
 #photo{
@@ -35,6 +37,112 @@
 
 #photo img{
     width: 40vmin;
+    transition: all 0.4s ease-out;
 }
+
+#photo img:hover{
+    transform: scale(1.02);
+    cursor: pointer;
+}
+
+/*********** 포지션 *****************************/
+.galimg1{
+    top: 25vmin;
+    left: 20vmin;
+}
+.galimg2{
+    transform: scale(0.6);
+    top: 5vmin;
+    left: 70vmin;
+    z-index: 2;
+}
+.galimg3{
+    transform: scale(0.8);
+    top: 40vmin;
+    left: 110vmin;
+}
+.galimg4{
+    top: 10vmin;
+    left: 140vmin;
+}
+.galimg5{
+    z-index: 2;
+    transform: scale(1.1);
+    top: 30vmin;
+    left: 190vmin;
+}
+.galimg6{
+    transform: scale(0.8);
+    top: 10vmin;
+    left: 240vmin;
+}
+.galimg7{
+    transform: scale(0.6);
+    top: 45vmin;
+    left: 280vmin;
+}
+.galimg8{
+    z-index: 2;
+    transform: scale(1.05);
+    top: 25vmin;
+    left: 310vmin;
+}
+.galimg9{
+    transform: scale(0.65);
+    top: 60vmin;
+    left: 350vmin;
+}
+.galimg10{
+    z-index: 2;
+    top: 10vmin;
+    left: 400vmin;
+}
+.galimg11{
+    transform: scale(0.85);
+    top: 35vmin;
+    left: 455vmin;
+}
+
+.galimg12{
+    z-index: 2;
+    transform: scale(1.3);
+    top: 20vmin;
+    left: 520vmin;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
