--- a/css/common.css
+++ b/css/common.css
@@ -9,7 +9,6 @@
     left: 0;
     height: 100px;
     width: 100%;
-    background-image: linear-gradient(to bottom, rgba(51, 51, 51, 0.7), rgba(51, 51, 51, 0));
     z-index: 100;
 }
 
@@ -58,6 +57,7 @@ header h1 {
     transition: all .2s ease-out;
     width: 25px;
     height: 25px;
+    margin: 0 auto;
 }
 
 @keyframes ring{
