--- a/css/list.css
+++ b/css/list.css
@@ -7,8 +7,8 @@
 @import url(common.css);
 
 /********************** 안경 콘텐츠************************/
-#gls_list_wrap{
-    margin: 20vh auto;    
+#gls_list_wrap {
+    margin: 20vh auto;
 }
 
 .gls_list {
@@ -23,23 +23,29 @@
     height: 100%;
 }
 
-.gls_list h5, .gls_list h6{
+.gls_list h5,
+.gls_list h6 {
+    width: 100%;
+    text-align: center;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     color: #333;
+    line-height: 1.2;
     transition: all 0.3s;
 }
 
-.htxt:hover h5, .htxt:hover h6{
+.htxt:hover h5,
+.htxt:hover h6 {
     color: #fff;
 }
-.gls_list h5{
+
+.gls_list h5 {
     font-size: 1.7vmin;
     bottom: 3.5vmin;
 }
 
-.gls_list h6{
+.gls_list h6 {
     font-size: 1.3vmin;
     font-weight: 400;
     bottom: 1vmin;
@@ -52,72 +58,114 @@
     transition: all 0.3s;
 }
 
-.gls_list img:hover{
+.gls_list img:hover {
     opacity: 0;
 }
 
-.gls_list a{
+.gls_list a {
     display: block;
 }
 
 
-.gls_list li:nth-child(3n){   
+.gls_list li:nth-child(3n) {
     margin-right: 0;
 }
 
-.gls_list li:nth-child(1){
+.gls_list li:nth-child(1) {
     background: url(../images/01.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(2){
+
+.gls_list li:nth-child(2) {
     background: url(../images/09.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(3){
+
+.gls_list li:nth-child(3) {
     background: url(../images/02.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(4){
+
+.gls_list li:nth-child(4) {
     background: url(../images/10.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(5){
+
+.gls_list li:nth-child(5) {
     background: url(../images/03.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(6){
+
+.gls_list li:nth-child(6) {
     background: url(../images/04.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(7){
+
+.gls_list li:nth-child(7) {
     background: url(../images/05.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(8){
+
+.gls_list li:nth-child(8) {
     background: url(../images/06.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(9){
+
+.gls_list li:nth-child(9) {
     background: url(../images/11.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(10){
+
+.gls_list li:nth-child(10) {
     background: url(../images/07.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(11){
+
+.gls_list li:nth-child(11) {
     background: url(../images/12.jpg) no-repeat 0/cover;
 }
-.gls_list li:nth-child(12){
+
+.gls_list li:nth-child(12) {
     background: url(../images/08.jpg) no-repeat 0/cover;
 }
 
 
 /*************** 상단 *******************/
-.gls_location{
+.gls_location {
     display: flex;
     justify-content: flex-end;
     font-size: 1.4vmin;
     font-weight: 500;
 }
 
-.gls_location li{
+.gls_location li {
     padding: 1.7vmin;
 }
 
-.gls_location li:hover a{
+.gls_location li:hover a {
     color: #6f8b9a;
 }
 
 
+/*************** 미디어쿼리****************/
+@media only screen and (max-width:500px) {
 
+    .gls_list li {
+        position: relative;
+        width: 49%;
+        margin-right: 2%;
+        margin-bottom: 2%;
+        height: 100%;
+    }
+
+    .gls_list li:nth-child(3n) {
+        margin-right: 2%;
+    }
+
+    .gls_list li:nth-child(2n) {
+        margin-right: 0;
+    }
+
+    .gls_list h5 {
+        font-size: 2vmin;
+        bottom: 4.5vmin;
+    }
+
+    .gls_list h6 {
+        font-size: 1.7vmin;
+        font-weight: 400;
+        bottom: 1vmin;
+    }
+}
+
+/* 미디어쿼리 500 */
