--- a/css/common.css
+++ b/css/common.css
@@ -206,21 +206,25 @@ header h1 {
 
     /*gnb*/
     .gnb {
-        width: 20px;
+        width: 70px;
     }
-
+    
+    .gnb li{
+        width: 50%;
+    }
+    
     .gnb img {
         width: 20px;
         height: 20px;
     }
 
-    .gnb li:nth-child(1),
     .gnb li:nth-child(2),
     .gnb li:nth-child(3) {
         display: none;
     }
 
-    .gnb li:last-child {
+    .gnb li:nth-child(1),
+    .gnb li:nth-child(4) {
         display: block;
     }
 
