--- a/css/main.css
+++ b/css/main.css
@@ -58,13 +58,14 @@ video {
     padding: 10% 0;
 }
 
-.title_wrap{
+.title_wrap {
     position: relative;
     left: 5%;
     opacity: 0;
     transition: all 1.5s ease-out;
 }
-.title_wrap.on{
+
+.title_wrap.on {
     left: 0%;
     opacity: 1;
 }
@@ -98,7 +99,7 @@ video {
     left: 0;
     top: 0;
     width: 100%;
-/*    height: 100%;*/
+    /*    height: 100%;*/
     transition: all .5s;
 }
 
@@ -107,7 +108,7 @@ video {
 }
 
 .sun_cont1.on .contimghover,
-.sun_cont2.on .contimghover{
+.sun_cont2.on .contimghover {
     opacity: 1;
 }
 
@@ -117,12 +118,12 @@ video {
 }
 
 .sun_cont1.on a,
-.sun_cont2.on a{
+.sun_cont2.on a {
     color: #2e63ac;
 }
 
 .sun_cont1.on span,
-.sun_cont2.on span{
+.sun_cont2.on span {
     transform: rotate(360deg);
 }
 
@@ -143,7 +144,7 @@ video {
     line-height: 1.2;
 }
 
-.cont_txt span{
+.cont_txt span {
     display: inline-block;
     transition: all .5s;
 }
@@ -203,6 +204,13 @@ MARQUEE {
 }
 
 /********************** 안경 콘텐츠************************/
+
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #gls_cont_wrap {
     padding: 10% 0;
 }
@@ -213,14 +221,9 @@ MARQUEE {
     overflow: hidden;
 }
 
-.gls_list {    
-    width: 200%;
-}
-
 .gls_list li {
-    width: 10.75%;
+    float: none;
     height: 100%;
-    margin-right: 1%;
 }
 
 .gls_list img {
@@ -229,20 +232,20 @@ MARQUEE {
     transition: all 0.3s;
 }
 
-.gls_list img:hover{
+.gls_list img:hover {
     opacity: 0;
 }
 
-.gls_list a{
+.gls_list a {
     color: #fff;
 }
 
-.gls_list h5{
+.gls_list h5 {
     font-size: 2vmin;
     padding-left: 3%;
 }
 
-.gls_list h6{
+.gls_list h6 {
     font-size: 1.5vmin;
     font-weight: 400;
     padding: 1% 0 1% 3%;
@@ -250,7 +253,7 @@ MARQUEE {
 
 
 /************************ 오프라인 매장 ********************/
-.shop_btn{
+.shop_btn {
     display: block;
     margin: 3% auto;
     width: 200px;
@@ -270,32 +273,32 @@ MARQUEE {
     background: #fff;
     border: 1px solid #000;
 }
-    
-.shop_img{
+
+.shop_img {
     width: 100%;
     height: 500px;
 }
 
-.shop_img li{
+.shop_img li {
     width: 33.33%;
     height: 100%;
 }
 
-.shop_img li:nth-child(1){
+.shop_img li:nth-child(1) {
     background: url(../images/shop1.jpg) no-repeat center/cover;
 }
 
-.shop_img li:nth-child(2){
+.shop_img li:nth-child(2) {
     background: url(../images/shop2.jpg) no-repeat center/cover;
 }
 
-.shop_img li:nth-child(3){
+.shop_img li:nth-child(3) {
     background: url(../images/shop3.jpg) no-repeat center/cover;
 }
 
 
 
-#flowTxt{
+#flowTxt {
     position: absolute;
     display: flex;
     left: 0;
@@ -309,15 +312,13 @@ MARQUEE {
     animation: flowTxt 20s linear infinite;
 }
 
-#flowTxt span{
+#flowTxt span {
     display: block;
     flex: 1;
 }
 
-@keyframes flowTxt{
-    to{
+@keyframes flowTxt {
+    to {
         left: -100%;
     }
 }
-
-
