--- a/css/gallery.css
+++ b/css/gallery.css
@@ -28,8 +28,9 @@
 /********************** 사진 *****************/
 #photo {
     position: relative;
-    width: 300%;
+    height: 100%;
 }
+
 
 #photo li {
     position: absolute;
@@ -142,7 +143,8 @@
     
     #photo{
         padding-top: 20vmin;
-        width: 100%;    
+        width: 100%; 
+        height: auto;
     }
     
     #photo li {
