--- a/css/show.css
+++ b/css/show.css
@@ -179,7 +179,6 @@ button:hover {
     width: 23.5%;
     margin-right: 2%;
     margin-bottom: 2%;
-    height: 100%;
 }
 
 .prd_list h5,
@@ -212,7 +211,6 @@ button:hover {
 .prd_list img {
     display: block;
     width: 100%;
-    height: 100%;
     transition: all 0.3s;
 }
 
@@ -261,7 +259,6 @@ button:hover {
         display: block;
     }
 
-
     .show_cont section {
         width: 100%;
     }
@@ -271,6 +268,8 @@ button:hover {
     }
 
     .show_list li {
+        float: "none";
+        display: "flex";
         margin-bottom: 0;
     }
 
@@ -307,7 +306,7 @@ button:hover {
         width: 49%;
         margin-right: 2%;
     }
-
+        
     .prd_list li:nth-child(2) {
         margin-right: 0;
     }
@@ -318,5 +317,9 @@ button:hover {
 
     .prd_list h6 {
         display: none;
+    }
+    
+    .swiper-wrapper{
+        height: auto;
     }
 }
